# gtd_agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AI_agents_-_Lightdash.md  Add_headless_browser_on_self-hosting_-_Lightdash.md  Add_the_Slack_integration_-_Lightdash.md  Adding_and_managing_Tables_-_Lightdash.md  Alerts_-_Lightdash.md  An_intro_to_metrics_and_dimensions_-_Lightdash.md  Authenticating_your_CLI_(login)_-_Lightdash.md  Autogenerate_Lightdash-ready_.yml_files_for_your_models_-_Lightdash.md  Caching_-_Lightdash.md  Chart_Version_History_-_Lightdash.md  Chart_types_-_Lightdash.md  Configure_Lightdash_to_use_an_external_database_-_Lightdash.md  Configure_Lightdash_to_use_external_storage_-_Lightdash.md  Configure_Lightdash_to_use_passwords_or_SSO_for_authentication_-_Lightdash.md  Configure_Prometheus_metrics_for_self-hosted_Lightdash_-_Lightdash.md  Configure_SMTP_for_Lightdash_email_notifications_-_Lightdash.md  Configure_a_Github_integration_for_self-hosted_Lightdash_-_Lightdash.md  Configure_a_Google_Sheets_integration_for_self-hosted_Lightdash_-_Lightdash.md  Configure_a_Slack_integration_for_self-hosted_Lightdash_-_Lightdash.md  Configure_a_standalone_scheduler_worker_for_self-hosted_Lightdash_-_Lightdash.md  Configure_logging_for_Lightdash_-_Lightdash.md  Contact_Us_-_Lightdash.md  Create_your_first_project_in_Lightdash_-_Lightdash.md  Creating_Dashboards_-_Lightdash.md  Creating_multiple_projects_-_Lightdash.md  Creating_tailored_tables_from_a_single_dbt_model_-_Lightdash.md  Custom_Charts_-_Lightdash.md  Custom_Tooltips_-_Lightdash.md  (+298 more)
(+21 files in other folders)
