[project]
name = "gtd-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.15",
    "datasets>=4.0.0",
    "google-adk>=1.8.0",
    "google-cloud-aiplatform>=1.105.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "litellm>=1.74.8",
    "openrouter>=1.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "ragas>=0.3.0",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "unstructured[md]>=0.18.11",
]
